--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,4 +2,19 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  margin: 0 auto;
+  background-color: transparent;
 }
+
+#app {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+body {
+  margin: 0 auto;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 50px; 
+}
+
