--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 #app {
@@ -10,9 +10,4 @@
   margin: 0 auto;
 }
 
-body {
-  position: relative;
-  min-height: 100vh;
-  padding-bottom: 50px; 
-}
 
